--- a/src/examples/simple/index.html
+++ b/src/examples/simple/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Superflow.js | Example: Simple</title>
-        <script src="../../superflow.js"></script>
+        <script src="../../superflow.min.js"></script>
     </head>
     <body>
         <script src="js/app.js"></script>
